{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 18,
  "lineage": "0a1e7a13-758a-84d8-6148-bd615763d231",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rtp03-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:068953489573:internet-gateway/igw-074c57c79b8c645c9",
            "id": "igw-074c57c79b8c645c9",
            "owner_id": "068953489573",
            "tags": {
              "Name": "rtp03-igw"
            },
            "tags_all": {
              "Name": "rtp03-igw"
            },
            "vpc_id": "vpc-0ae5b007465b9beaf"
          },
          "dependencies": [
            "aws_vpc.rtp03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtp03-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:068953489573:route-table/rtb-09b3a0a1d08c4511a",
            "id": "rtb-09b3a0a1d08c4511a",
            "owner_id": "068953489573",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074c57c79b8c645c9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtp03-public-rt"
            },
            "tags_all": {
              "Name": "rtp03-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae5b007465b9beaf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.rtp03-igw",
            "aws_vpc.rtp03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rtp03-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:068953489573:security-group/sg-0c62d522a6cba5df8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c62d522a6cba5df8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rtp03-sg",
            "name_prefix": "",
            "owner_id": "068953489573",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-sg"
            },
            "tags_all": {
              "Name": "ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae5b007465b9beaf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rtp03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rtp01-public_subent_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:068953489573:subnet/subnet-048345fc2399abebe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048345fc2399abebe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068953489573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rtp01-public_subent_01"
            },
            "tags_all": {
              "Name": "rtp01-public_subent_01"
            },
            "vpc_id": "vpc-0ae5b007465b9beaf"
          },
          "dependencies": [
            "aws_vpc.rtp03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rtp02-public_subent_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:068953489573:subnet/subnet-04a293c235f697919",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a293c235f697919",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068953489573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rtp02-public_subent_02"
            },
            "tags_all": {
              "Name": "rtp02-public_subent_02"
            },
            "vpc_id": "vpc-0ae5b007465b9beaf"
          },
          "dependencies": [
            "aws_vpc.rtp03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rtp03-public_subent_03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:068953489573:subnet/subnet-027ff07401af46400",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027ff07401af46400",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068953489573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rtp03-public_subent_03"
            },
            "tags_all": {
              "Name": "rtp03-public_subent_03"
            },
            "vpc_id": "vpc-0ae5b007465b9beaf"
          },
          "dependencies": [
            "aws_vpc.rtp03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rtp03-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:068953489573:vpc/vpc-0ae5b007465b9beaf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08473a567f335b30b",
            "default_route_table_id": "rtb-0fc6e8a1b2ef0559a",
            "default_security_group_id": "sg-05cdb1ac2bb10dbc6",
            "dhcp_options_id": "dopt-07a1867d14ddccfcb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ae5b007465b9beaf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fc6e8a1b2ef0559a",
            "owner_id": "068953489573",
            "tags": {
              "Name": "rpt03-vpc"
            },
            "tags_all": {
              "Name": "rpt03-vpc"
            }
          }
        }
      ]
    }
  ]
}